NXP-30020: use independently-released Nashorn